<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/electricityConsumptionDetailedInformation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_bottom_change_consumptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.sdgbachelorproject.view.widget.ConsumptionAddView
            android:id="@+id/heating_add_consumption_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detailedConsumptionNumberPickerDefault="3"
            app:detailedConsumptionNumberPickerMax="30"
            app:detailedConsumptionNumberPickerMin="10"
            app:detailedConsumptionText="@string/heating_consumption_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.sdgbachelorproject.view.widget.ConsumptionAddView
            android:id="@+id/heating_add_consumption_house_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detailedConsumptionText="@string/heating_consumption_house_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heating_add_consumption_temperature" />

        <com.example.sdgbachelorproject.view.widget.ConsumptionAddView
            android:id="@+id/heating_add_consumption_number_of_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detailedConsumptionNumberPickerDefault="3"
            app:detailedConsumptionNumberPickerMax="10"
            app:detailedConsumptionNumberPickerMin="1"
            app:detailedConsumptionText="@string/heating_consumption_room_numbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heating_add_consumption_house_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_bottom_change_consumptions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_change_consumptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_heating_consumption_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>