<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_energy_saving_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energy_saving_1"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_energy_saving_1" />

        <ImageView
            android:id="@+id/path1_lesson1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_1" />

        <ImageView
            android:id="@+id/path1_arrow_1"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path1_lesson1" />

        <ImageView
            android:id="@+id/path1_lesson2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path1_lesson1" />

        <ImageView
            android:id="@+id/path1_arrow_2"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="-45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path1_lesson2" />

        <ImageView
            android:id="@+id/path1_lesson3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path1_lesson2" />

        <ImageView
            android:id="@+id/path1_arrow_3"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path1_lesson3" />

        <ImageView
            android:id="@+id/path1_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path1_lesson3" />

        <!--        Lesson 2-->

        <TextView
            android:id="@+id/txt_energy_saving_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:text="@string/energy_saving_2"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path1_quiz" />

        <ImageView
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_energy_saving_2" />

        <ImageView
            android:id="@+id/path2_lesson1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_2" />

        <ImageView
            android:id="@+id/path2_arrow_1"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path2_lesson1" />

        <ImageView
            android:id="@+id/path2_lesson2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path2_lesson1" />

        <ImageView
            android:id="@+id/path2_arrow_2"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="-45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path2_lesson2" />

        <ImageView
            android:id="@+id/path2_lesson3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path2_lesson2" />

        <ImageView
            android:id="@+id/path2_arrow_3"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path2_lesson3" />

        <ImageView
            android:id="@+id/path2_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path2_lesson3" />


        <!--        Lesson 3-->

        <TextView
            android:id="@+id/txt_energy_saving_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:text="@string/energy_saving_3"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path2_quiz" />

        <ImageView
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_energy_saving_3" />

        <ImageView
            android:id="@+id/path3_lesson1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_3" />

        <ImageView
            android:id="@+id/path3_arrow_1"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path3_lesson1" />

        <ImageView
            android:id="@+id/path3_lesson2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path3_lesson1" />

        <ImageView
            android:id="@+id/path3_arrow_2"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="-45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path3_lesson2" />

        <ImageView
            android:id="@+id/path3_lesson3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path3_lesson2" />

        <ImageView
            android:id="@+id/path3_arrow_3"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path3_lesson3" />

        <ImageView
            android:id="@+id/path3_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path3_lesson3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>